Created Example Survey

--- a/Virus Survey Tool/Virus Survey Tool/Pages/ExampleSurvey.razor
+++ b/Virus Survey Tool/Virus Survey Tool/Pages/ExampleSurvey.razor
@@ -5,9 +5,13 @@
 <p>
     1. Where do you live?
 </p>
+<p>
+    <input type="radio" name="Resident" value=1> On Campus <br />
+    <input type="radio" name="Resident" value=2> Off Campus <br />
+</p>
 
 <p>
-    <br /> If you live on campus... <br />
+    If you live on campus... <br />
     Which building do you live in?
 </p>
 
@@ -32,9 +36,9 @@
     <input type="checkbox" name="headache"> A new headache that you cannot attribute to another health condition?<br />
     <input type="checkbox" name="smelltaste"> New loss of smell or taste that you cannot attribute to another health condition?<br />
     <input type="checkbox" name="vomit"> Vomiting or diarrhea that you cannot attribute to another health condition?<br />
-    <input type="checkbox" name="Evaluation"> Are you <br />
-    <input type="checkbox" name=""><br />
-    <input type="checkbox" name=""><br />
+    <input type="checkbox" name="evaluation"> Are you under evaluation for COVID-19 (e.g., waiting for the results of a viral test to confirm infection)?<br />
+    <input type="checkbox" name=""> Have you been diagnosed with COVID-19 and not yet cleared to discontinue isolation?<br />
+    <input type="checkbox" name=""> I have experienced none of these<br />
 </p>
 <p>
     <br />4. To the best of your knowledge during the past 14 days, have you been withing 6 feet<br />
@@ -42,7 +46,10 @@
     had direct contact with that person's mucus or saliva, or been contacted by public health<br />
     and told you were in close contact with someone known to have COVID-19?
 </p>
-
+<p>
+    <input type="radio" name="Exposed" value=1> Yes <br />
+    <input type="radio" name="Exposed" value=2> No <br />
+</p>
 
 <br />
 <br />
